# Enc-14-oct-2025

./: .gitignore  AIRTEL_AGGRESSIVE_BLOCKING_SOLUTION.md  AIRTEL_WIFI_FINAL_SOLUTION.md  AIRTEL_WIFI_SOLUTION.md  ANDROID_15_BLUR_FIX.md  BottomSheetDialogImplementation.java  EDGE_TO_EDGE_IMPLEMENTATION.md  FREE_TURN_SERVERS_CONFIGURATION.md  GLOBAL_WEBRTC_SOLUTION.md  GROUP_CHAT_CAPTION_DEBUG_INSTRUCTIONS.md  IMAGE_ADAPTER2_CAPTION_FIX.md  Keystore  MESSAGE_PREVIEW_USAGE_EXAMPLE.md  MULTIPLE_IMAGE_DIALOG_USAGE.md  NETWORK_CONNECTIVITY_FIXES.md  PERMANENT_NETWORK_SOLUTION.md  PICASSO_CRASH_FIX.md  RESTRICTIVE_NETWORK_SOLUTION.md  SHARED_ELEMENT_IMPLEMENTATION_COMPLETE.md  SHARED_ELEMENT_MIGRATION_GUIDE.md  SHARED_ELEMENT_USAGE_EXAMPLES.md  SIMPLE_SWIPE_NAVIGATION_GUIDE.md  SMOOTH_NAVIGATION_COMPLETE_SUMMARY.md  SMOOTH_NAVIGATION_IMPLEMENTATION.md  SMOOTH_NAVIGATION_TEST.md  STUN_SERVER_ERRORS_EXPLANATION.md  VIDEO_CALL_COMPATIBILITY_FIXES.md  VOICE_CALL_AUDIO_STABILITY_FIXES.md  VOICE_CALL_CONNECTION_FIXES.md  VOICE_CALL_PHOTO_AND_AUDIO_FIXES.md  WEBRTC_DEBUG_SCRIPT.md  WEBVIEW_CAMERA_IMPLEMENTATION.md  WIFI_CALLING_SOLUTION.md  align_16kb.sh  build.gradle  elf_16kb_aligner.c  encryption_public_key.pem  fix_16kb_alignment.py  force_16kb_alignment.py  gradle.properties  (+3 more)
app/: .gitignore  build.gradle  build.gradle.backup  build.gradle.test  google-services.json  proguard-rules.pro
app/src/debug/res/values/: doneIcon_background.xml  done_icon_background.xml  icon_final_background.xml  iconnew_background.xml  logo_background.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html  script.js  scriptVoice.js  stylesVoice.css
app/src/main/cpp/: CMakeLists.txt  dummy.cpp
gradle/wrapper/: gradle-wrapper.properties
(+1334 files in other folders)
